--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,12 @@
-cmake_minimum_required(VERSION 3.16)
-project(matrix)
+cmake_minimum_required(VERSION 3.14)
+project(Temperature_distribution)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-include_directories(.)
+set(SOURCE_FILES main.cpp CSRmatrix.cpp CSRmatrix.h special_number.cpp special_number.h)
+add_executable(Temperature_distribution ${SOURCE_FILES})
+include_directories(/usr/local/include)
 
-add_executable(matrix
-        main.cpp
-        CSRmatrix.h
-        CSRmatrix.cpp)
+find_package(SFML 2.5 COMPONENTS system window graphics network audio REQUIRED)
+include_directories(${SFML_INCLUDE_DIRS})
+target_link_libraries(Temperature_distribution sfml-system sfml-window sfml-graphics sfml-audio sfml-network)
