changed animation, colors & background + buttons

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,11 @@ set(SOURCE_FILES main.cpp CSRmatrix.cpp CSRmatrix.h Solvers.h Vector.h special_n
         menu.cpp
         menu.h
         Window.cpp
-        Window.h)
+        Window.h
+        TextBar.h
+        TextBar.cpp
+        Button.h
+        Button.cpp)
 
 add_executable(Temperature_distribution ${SOURCE_FILES})
 include_directories(/usr/local/include)
